# decoupler-py

./: .bumpversion.cfg  .codecov.yml  .cruft.json  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  README.rst  environment.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.yml  question.md
.github/workflows/: ci.yml  devel.yml  main.yml  notebooks.yaml  publish_package_docker.yml  python-package.yml  release.yaml  test.yaml
decoupler/: __init__.py  _misc.py  benchmark.py  consensus.py  decouple.py  method_aucell.py  method_gsea.py  method_gsva.py  method_mdt.py  method_mlm.py  method_ora.py  method_udt.py  method_ulm.py  method_viper.py  method_wmean.py  method_wsum.py  method_zscore.py  metrics.py  omnip.py  plotting.py  pre.py  utils.py  utils_anndata.py  utils_benchmark.py  utils_calibrated_metrics.py
decoupler/tests/: test_aucell.py  test_benchmark.py  test_consensus.py  test_decouple.py  test_gsea.py  test_gsva.py  test_mdt.py  test_methods.py  test_metrics.py  test_mlm.py  test_omnip.py  test_ora.py  test_plotting.py  test_pre.py  test_udt.py  test_ulm.py  test_utils.py  test_utilsanndata.py  test_utilsbenchmark.py  test_viper.py  test_wmean.py  test_wsum.py  test_zscore.py
docs/: api.md  conf.py  contributing.md  index.md  references.bib
docs/_static/css/: custom.css
docs/api/: bm.md  ds.md  index.md  mt.md  op.md  pl.md  pp.md  tl.md
docs/notebooks/: example.ipynb  index.md
docs/notebooks/bench/: index.md  rna.ipynb
docs/notebooks/bulk/: index.md  rna.ipynb
docs/notebooks/omnipath/: index.md  licenses.ipynb  orthologs.ipynb
docs/notebooks/scell/: index.md  rna_psbk.ipynb  rna_pstime.ipynb  rna_sc.ipynb
docs/notebooks/spatial/: index.md
docs/source/: api.rst  conf.py  index.rst  installation.rst  reference.rst  release_notes.rst  requirements.txt  usage.rst
docs/source/notebooks/: benchmark.ipynb  bulk.ipynb  cell_annotation.ipynb  dorothea.ipynb  license.ipynb  msigdb.ipynb  progeny.ipynb  pseudobulk.ipynb  spatial.ipynb  translate.ipynb  usage.ipynb
scr/decoupler/: __init__.py  pre.py
src/decoupler/: _Method.py  _Plotter.py  __init__.py  _datatype.py  _docs.py  _download.py  _log.py  _odeps.py  consensus.py  decouple.py  method_aucell.py  method_gsva.py  method_mlm.py  method_ora.py  method_ulm.py  method_viper.py  method_wmean.py  method_wsum.py  omnip.py  pre.py  utils.py
src/decoupler/bm/: __init__.py  _pp.py  _run.py
src/decoupler/bm/metric/: _Metric.py  __init__.py  _auc.py  _fscore.py  _hmean.py  _qrank.py
src/decoupler/bm/pl/: __init__.py  _auc.py  _bar.py  _format.py  _fscore.py  _qrank.py  _summary.py
src/decoupler/ds/: __init__.py  _bulk.py  _scell.py  _spatial.py  _toy.py  _utils.py
src/decoupler/mt/: __init__.py  _aucell.py  _consensus.py  _decouple.py  _gsea.py  _gsva.py  _mdt.py  _methods.py  _mlm.py  _ora.py  _run.py  _udt.py  _ulm.py  _viper.py  _waggr.py  _zscore.py
src/decoupler/op/: __init__.py  _collectri.py  _dorothea.py  _download.py  _dtype.py  _hallmark.py  _progeny.py  _resource.py  _translate.py
src/decoupler/pl/: __init__.py  _barplot.py  _dotplot.py  _filter_by_expr.py  _filter_by_prop.py  _filter_samples.py  _leading_edge.py  _network.py  _obsbar.py  _obsm.py  _order.py  _order_targets.py  _psbulk_samples.py  _rank_obsm.py  _source_targets.py  _volcano.py
src/decoupler/pp/: __init__.py  anndata.py  data.py  net.py
src/decoupler/tl/: __init__.py  _rank_obsm.py  _rankby_group.py  _rankby_obsm.py  _rankby_order.py  _test.py
tests/: conftest.py  test.py  test_basic.py  test_download.py  test_methods.py  test_omnip.py  test_pre.py  test_utils.py  test_utilsanndata.py  test_version.py
tests/bm/: test_benchmark.py  test_pl.py
tests/ds/: test_bulk.py  test_scell.py  test_spatial.py  test_toy.py  test_utils.py
tests/mt/: test_aucell.py  test_consensus.py  test_decouple.py  test_gsea.py  test_gsva.py  test_mdt.py  test_methods.py  test_mlm.py  test_ora.py  test_run.py  test_udt.py  test_ulm.py  test_viper.py  test_waggr.py  test_zscore.py
tests/op/: test_collectri.py  test_dorothea.py  test_dtype.py  test_hallmark.py  test_progeny.py  test_resource.py  test_translate.py
tests/pl/: test_Plotter.py  test_barplot.py  test_dotplot.py  test_filter_by_expr.py  test_filter_by_prop.py  test_filter_samples.py  test_leading_edge.py  test_network.py  test_obsbar.py  test_obsm.py  test_order.py  test_order_targets.py  test_source_targets.py  test_volcano.py
tests/pp/: test_anndata.py  test_data.py  test_net.py
tests/tl/: test_rankby_group.py  test_rankby_obsm.py  test_rankby_order.py
