[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "decoupler"
version = "1.6.2"
description = "Ensemble of methods to infer biological activities from omics data"
license = "gpl-3.0-only"
authors = [
    "Pau Badia i Mompel <pau.badia@uni-heidelberg.de>"
]
packages = [
    { include = "decoupler" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
keywords = [
    "systems biology", "molecular biology", "signaling network",
    "transcriptomics", "modeling", "mechanistic modeling",
    "activity inference", "molecular network", "omics",
    "biomedicine", "molecular footprint", "molecular signature"
]
repository = "https://github.com/saezlab/decoupler-py"
homepage = "https://decoupler.readthedocs.io/"
documentation = "https://decoupler.readthedocs.io/"
readme = "README.md"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/saezlab/decoupler-py/issues"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.66.4"
typing-extensions = "^4.12.2"
numba = "^0.60.0"
numpy = "^1"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0"
bump2version = "*"
pytest-cov = "^5.0.0"
scanpy = "^1.10.1"
psutil = "^5.9.8"
flake8-pyproject = {git = "https://github.com/john-hen/Flake8-pyproject.git"}
sphinx = "^7.3.7"
nbsphinx = "^0.9.4"

[tool.poetry.group.omnipath.dependencies]
omnipath = "^1.0.8"
pypath-omnipath = "^0.16.15"

[tool.poetry.group.scikit.dependencies]
scikit-learn = "^1.5.0"


[tool.poetry.group.plotting.dependencies]
igraph = "^0.11.5"
adjusttext = "^1.1.1"

[tool.pytest.ini_options]
testpaths = [
  "decoupler/tests",
]
xfail_strict = true
addopts = [
    # "-Werror",  # if 3rd party libs raise DeprecationWarnings, just use filterwarnings below
    "--import-mode=importlib",  # allow using test files with same name
]
filterwarnings = [
    # "ignore:.*U.*mode is deprecated:DeprecationWarning",
]

[tool.flake8]
extend-select = ["CE101"]
ignore = [
  "D200", "D202", "D401", "D105",
  "W503", "W504",
  "E731", "E131", "E251", "E303"
]
per-file-ignores = [
    "docs/src/conf.py:D100",
    "tests/*:D100,D101,D102",
    "*/__init__.py:F401"
]
max-line-length = 80
count = true
exclude = [
    ".git",
    "__pycache__",
    "build",
    "docs/_build",
    "dist"
]
